--- a/tutorial/app_package/templates/index.html
+++ b/tutorial/app_package/templates/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <table style="width:50%">
+    <table style="width:50%" style="height:50%">
       <thead>
         <th>Jméno</th><th>Třída</th><th>Oběd</th>
       </thead>>
