--- a/my_app/templates/test.html
+++ b/my_app/templates/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta http-equiv="refresh" content="1">  
     <meta charset="utf-8">
     <title></title>
   </head>
