--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta http-equiv="refresh" content="1">
     <meta charset="utf-8">
     <title></title>
   </head>
@@ -11,9 +12,9 @@
       </thead>>
       {% for zak in stravnici %}
       <tr>
-        <th>{{zak.jmeno}}</th><th>{{zak.trida}}</th><th>{{zak.obed}}</th>
+        <th>{{zak[0]}}</th><th>{{zak[1]}}</th><th>{{zak[2]}}</th>
       </tr>
-    {% endfor %}
+      {% endfor %}
     </table>
   </body>
 </html>>
