--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -12,7 +12,7 @@
       </thead>>
       {% for zak in stravnici %}
       <tr>
-        <th>{{zak[0]}}</th><th>{{zak[1]}}</th><th>{{zak[2]}}</th>
+        <th>{{zak.jmeno}}</th><th>{{zak.trida}}</th><th>{{zak.obed}}</th>
       </tr>
       {% endfor %}
     </table>
