--- a/templates/test.html
+++ b/templates/test.html
@@ -18,15 +18,6 @@
     </table>
   </body>
   <script>
-  var xmlhttp = new XMLHttpRequest();
-xmlhttp.onreadystatechange = function()
- {
-  if (this.readyState == 4 && this.status == 200)
-  {
-    var myObj = JSON.parse(this.responseText);
-    document.getElementById("jmeno").innerHTML = myObj[0][0];
-  }
- };
-xmlhttp.open("GET", "../stravnici.json", true);
-xmlhttp.send(); </script>
-  </html>>
+
+  </script>
+  </html>
