--- a/templates/test.html
+++ b/templates/test.html
@@ -7,10 +7,10 @@
   <body>
     <table style="width:50%" style="height:50%" id="lunchTable">
       <thead>
-        <th>Jméno</th><th>Třída</th><th>Oběd</th>
+        <th>Jméno</th><th>Třída</th><th>Oběd</th><th>Stav</th>
       </thead>
       <tr>
-        <th id="jmeno"></th><th id="trida"></th><th id="obed"></th>
+        <th id="jmeno"></th><th id="trida"></th><th id="obed"></th><th id="stav"></th>
       </tr>
     </table>
 
