--- a/templates/test.html
+++ b/templates/test.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <title></title>
   </head>
   <body>
@@ -25,39 +26,41 @@
     </table>
 
   </body>
-  <script type="text/javascript">
+  <script type="text/javascript" charset="utf-8">
+      var socket = io.connect("http://192.168.1.144:5000");
+      socket.on("connect", function() {
+        console.log("connect")
+        socket.emit("connected", {data: "ping"});
+      });
 
-  async function update_data(){
-    const response = await fetch("/get_data");    //sends request with /get_data url
-    const data = await response.json();           //saves responce into data
+      socket.on("connection_established"  , function() {
+        console.log("connection_established");
+      });
 
-    console.log(data)
+      socket.on('vydany_obed', function(obedy){
+        console.log(obedy);
+        document.getElementById("pocet_jednicek").innerHTML = obedy.jednicky;
+        document.getElementById("pocet_dvojek").innerHTML = obedy.dvojky;
+      });
 
-    var stravnici = data[0]
-    var obedy = data[1]
+      socket.on("pip", function(stravnici){
+        console.log(stravnici)
+        var rows = (document.getElementById("lunchTable").getElementsByTagName("tr").length) - 1; //counts lenght of existing table - 1(head)
+        for (var i = 0; i < rows; i++) {
+          document.getElementById("lunchTable").deleteRow(1); //deletes all rows below thead
+            }
 
-    document.getElementById("pocet_jednicek").innerHTML = obedy.jednicky
-    document.getElementById("pocet_dvojek").innerHTML = obedy.dvojky
+        for (var i = 0; i <stravnici.length; i++) {
+          var table = document.getElementById("lunchTable");
+          var row = table.insertRow(i+1);
+          var cells = new Array(stravnici[i].length);
 
-    var rows = (document.getElementById("lunchTable").getElementsByTagName("tr").length) - 1; //counts lenght of existing table - 1(head)
-    for (var i = 0; i < rows; i++) {
-      document.getElementById("lunchTable").deleteRow(1); //deletes all rows below thead
-        }
-
-    for (var i = 0; i <stravnici.length; i++) {
-      var table = document.getElementById("lunchTable");
-      var row = table.insertRow(i+1);
-      var cells = new Array(stravnici[i].length);
-
-      for(var j = 0; j < stravnici[i].length; j++)  {
-        cells[j] = row.insertCell(j);
-        cells[j].innerHTML = stravnici[i][j];
-        }
-      }
-    };
-
-    update_data();
-	  setInterval(function () {update_data();}, 800);
+          for(var j = 0; j < stravnici[i].length; j++)  {
+            cells[j] = row.insertCell(j);
+            cells[j].innerHTML = stravnici[i][j];
+            }
+          }
+        });
 
   </script>
 </html>
