--- a/templates/test.html
+++ b/templates/test.html
@@ -2,19 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/display.css')}}"/>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <title></title>
   </head>
   <body>
-    <table style="width:50%" style="height:50%" id="lunchTable">
+    <table id="lunchTable">
       <thead>
         <th>Jméno</th><th>Třída</th><th>Oběd</th><th>Stav</th>
       </thead>
-      <tr>
-        <th id="jmeno"></th><th id="trida"></th><th id="obed"></th><th id="stav"></th>
-      </tr>
+      <tbody>
+        <!-- <tr>
+          <td id="jmeno">Jan Nová</td><td id="trida">4B</td><td id="obed">2</td><td id="stav">1</td>
+        </tr> -->
+      </tbody>
     </table>
-
+    <!-- <button id="login" onclick="login()">Login</button> -->
     <table id="pocet_obedu">
       <tr>
         <th>Jedničky:</th><th id="pocet_jednicek"></th>
@@ -27,10 +30,11 @@
 
   </body>
   <script type="text/javascript" charset="utf-8">
-
+      window.authentication = 0
 
       var socket = io.connect("http://192.168.1.144:5000"); //sem dát správnou ip
-      socket.on("connect", function() {
+
+      socket.on("connect", function(){
         console.log("connect")
         socket.emit("connected", {data: "ping"});
       });
@@ -45,34 +49,58 @@
         document.getElementById("pocet_dvojek").innerHTML = obedy.dvojky;
       });
 
-      socket.on("a_ven", function(data){
-        console.log(data.stravnik[0]);
-
-        if (confirm(data.stravnik[0] + " tu je mimo rozvrh. Vydat Oběd?")); {
-          socket.emit("vydano", data);
-          alert("Vydáno");
-
-        };
+      socket.on("login", function(){
+        input = prompt("Heslo:");
+        console.log(input);
+        socket.emit("login", input);
       });
 
-      socket.on("pip", function(stravnici){
-        console.log(stravnici)
-        var rows = (document.getElementById("lunchTable").getElementsByTagName("tr").length) - 1; //counts lenght of existing table - 1(head)
-        for (var i = 0; i < rows; i++) {
-          document.getElementById("lunchTable").deleteRow(1); //deletes all rows below thead
+      socket.on("authenticate", function(){
+        alert("logged in")
+        window.authentication = 1
+      });
+
+      socket.on("pip", function(data){
+        var stravnik = data.stravnik;
+        console.log(stravnik);
+        var table = document.getElementById("lunchTable");
+        var row = table.insertRow(1);
+        for(var i = 0; i < stravnik.length; i++) {
+          var cell =  row.insertCell(i);
+          var content = stravnik[i];
+            if(i == 3) {
+              if(content == 2){
+                row.style.backgroundColor = "#F9A8A8";
+                var content = "Vydáno";
+              }
+              else {
+                row.style.backgroundColor = "#97FBA3";
+                var content = "Objednáno";
+              }
             }
 
-        for (var i = 0; i <stravnici.length; i++) {
-          var table = document.getElementById("lunchTable");
-          var row = table.insertRow(i+1);
-          var cells = new Array(stravnici[i].length);
+            if(data.mimo_rozvrh){
+              row.style.backgroundColor = "#F3FE8C";
+            }
 
-          for(var j = 0; j < stravnici[i].length; j++)  {
-            cells[j] = row.insertCell(j);
-            cells[j].innerHTML = stravnici[i][j];
+          cell.innerHTML = content;
+        }
+
+        var rows = (document.getElementById("lunchTable").getElementsByTagName("tr").length) - 1; //counts lenght of existing table - 1(head)
+        if (rows > 4) {
+          console.log(rows);
+          document.getElementById("lunchTable").deleteRow(5); //deletes all rows below thead
+        }
+        if(window.authentication){
+          if(data.mimo_rozvrh){
+            if (confirm(data.stravnik[0] + " tu je mimo rozvrh. Vydat Oběd?")){
+              socket.emit("vydano", data);
+              row.style.backgroundColor = "#97FBA3";
+              alert("Vydáno");
             }
           }
-        });
+        }
+      });
 
   </script>
 </html>
