--- a/templates/rozvrhy.html
+++ b/templates/rozvrhy.html
@@ -1,14 +1,95 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <title></title>
   </head>
   <body>
-    <p>{{rozvrhy}}</p>
+    <table id="schedule">
+    </table>
+    <button id="send_button" onclick= "send_data()" >Odeslat rozvrh</button>
+
   </body>
   <script type="text/javascript" charset="utf-8">
-    var rozvrhy = {{rozvrhy}}
+    var schedule_table = {{schedule_table | safe}};
+    var table = document.getElementById("schedule");
+    var days = Object.keys(schedule_table);
+    console.log(days);
+    for (var i = 0; i < days.length; i++) {
+      var day = days[i];
+      console.log(i);
+      console.log(day);
+
+      var breaks = Object.keys(schedule_table[day]);
+      var row = table.insertRow();
+      var cell = row.insertCell(0);
+      cell.innerHTML = day;
+
+      for (var j = 0; j < breaks.length; j++) {
+        console.log(j);
+        var brek = breaks[j];
+        var row = table.insertRow();
+        var cell1 = row.insertCell(0);
+        cell1.innerHTML = brek;
+        console.log(brek);
+
+        var cell2 = row.insertCell(1);
+        cell2.innerHTML = schedule_table[day][brek];
+        var id = day + "_" + brek + "C"
+        cell2.setAttribute("id", id);
+        console.log(cell2.id);
+        console.log(schedule_table[day][brek]);
+
+        var cell3 = row.insertCell(2);
+        var box = document.createElement("INPUT");
+        box.setAttribute("type", "text");
+        var id = day + "_" + brek;
+        box.setAttribute("id", id);
+        cell3.appendChild(box);
+        console.log(day + brek);
+
+        var cell4 = row.insertCell(3);
+        var but = document.createElement("INPUT");
+        but.setAttribute("type", "button");
+        but.setAttribute("onClick", "update_table(\'"+ day + "_" + brek + "\')");
+        cell4.appendChild(but);
+      }
+      var row = table.insertRow();
+      var cell = row.insertCell();
+    }
+
+    var socket = io.connect("http://localhost:5000"); //sem dát správnou ip
+    socket.on("connect", function(){
+      console.log("connect")
+      socket.emit("connected", {data: "ping"});
+    });
+
+    function send_data(){
+      console.log("asasasasa");
+      socket.emit("schedule_change", {data: schedule_table});
+    }
+
+    function update_table(text_id){
+      var text_box = document.getElementById(text_id);
+       var text = text_box.value;
+       var position = text_id.split("_");
+       var content = schedule_table[position[0]][position[1]];
+       if (content.includes(text)) {
+         var i = content.indexOf(text);
+         content.splice(i)
+         schedule_table[position[0]][position[1]] = content;
+         var id = text_id + "C"
+         cell = document.getElementById(id);
+         cell.innerHTML = content;
+       }
+       else {
+         content.push(text);
+         schedule_table[position[0]][position[1]] = content;
+         var id = text_id + "C"
+         cell = document.getElementById(id);
+         cell.innerHTML = content;
+       }
+    }
 
   </script>
 </html>
