--- a/app/templates/rozvrhy.html
+++ b/app/templates/rozvrhy.html
@@ -2,18 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/display.css')}}"/> -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <title></title>
+    <title>Rozvrhy</title>
   </head>
   <body>
     <table id="schedule">
     </table>
+
+    <table id="breaks">
+    </table>
+    <button id="add_button" onclick= "add()" >+</button>
+    <button id="minus_button" onclick= "minus()" >-</button>
     <button id="send_button" onclick= "send_data()" >Odeslat rozvrh</button>
 
   </body>
   <script type="text/javascript" charset="utf-8">
     var schedule_table = {{schedule_table | safe}};
     generate_table()
+    break_table()
 
     var socket = io.connect("http://localhost:5000");
     socket.on("connect", function(){
@@ -73,6 +80,94 @@
         var cell = row.insertCell();
       }
     }
+
+    function add(){
+      var breaks = Object.keys(schedule_table["breaks"]);
+      var last = Number(breaks.pop()) + 1
+      var next = last.toString(10)
+      console.log(breaks, last, next);
+      schedule_table["breaks"][next] = [["-"],["-"]]
+      break_table()
+    }
+
+    function minus(){
+      var breaks = Object.keys(schedule_table["breaks"]);
+      delete schedule_table["breaks"][breaks.pop()]
+      break_table()
+    }
+
+
+    function break_table(){
+      var table = document.getElementById("breaks");
+      var breaks = Object.keys(schedule_table["breaks"]);
+
+      var rows = (document.getElementById("breaks").getElementsByTagName("tr").length);
+
+       for (var i = 0; i < rows; i++) {
+         document.getElementById("breaks").deleteRow(0);
+       }
+
+      for (var i = 0; i < (breaks.length); i++) {
+        var brek = breaks[i];
+        var row = table.insertRow();
+        var cell1 = row.insertCell(0);
+        cell1.innerHTML = brek;
+        console.log(brek);
+
+        var cell2 = row.insertCell(1);
+        cell2.innerHTML = schedule_table["breaks"][brek][0];
+        var id = brek + "_0" + "C"
+        cell2.setAttribute("id", id);
+        console.log(cell2.id);
+
+        var cell3 = row.insertCell(2);
+        var box = document.createElement("INPUT");
+        box.setAttribute("type", "text");
+        var id = brek + "_0"
+        box.setAttribute("id", id);
+        cell3.appendChild(box);
+
+        var cell4 = row.insertCell(3);
+        var but = document.createElement("INPUT");
+        but.setAttribute("type", "button");
+        but.setAttribute("onClick", "update_breaks(\'"+ brek + "_0" + "\')");
+        cell4.appendChild(but);
+
+        var cell5 = row.insertCell(4);
+        cell5.innerHTML = schedule_table["breaks"][brek][1];
+        var id = brek + "_1" + "C"
+        cell5.setAttribute("id", id);
+        console.log(cell2.id);
+
+        var cell6 = row.insertCell(5);
+        var box1 = document.createElement("INPUT");
+        box1.setAttribute("type", "text");
+        var id = brek + "_1"
+        box1.setAttribute("id", id);
+        cell6.appendChild(box1);
+
+        var cell7 = row.insertCell(6);
+        var but1 = document.createElement("INPUT");
+        but1.setAttribute("type", "button");
+        but1.setAttribute("onClick", "update_breaks(\'"+ brek + "_1" + "\')");
+        cell7.appendChild(but1);
+        }
+      }
+
+      function update_breaks(text_id){
+        var text_box = document.getElementById(text_id);
+         var position = text_id.split("_");
+         var text = text_box.value;
+         var text = text.split(",");
+         var num1 = Number(text[0]);
+         var num2 = Number(text[1]);
+         console.log(schedule_table["breaks"][position[0]][Number(position[1])], [num1, num2]);
+         if (num1 === parseInt(num1, 10) && num2 === parseInt(num2, 10)) {
+           schedule_table["breaks"][position[0]][Number(position[1])] = [num1, num2];
+           cell = document.getElementById(text_id + "C");
+           cell.innerHTML = schedule_table["breaks"][position[0]][Number(position[1])];
+         }
+        }
 
     function update_table(text_id){
       var text_box = document.getElementById(text_id);
