--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/display.css')}}"/>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-    <title></title>
+    <title>Strávníci</title>
   </head>
   <body>
     <table id="lunchTable">
